Huge performance boost 🚀 Fix screen flashing and dark mode handling
Remove temporary CSS workaround and update styles Move math-related head
content to view-slides page Simplify dark mode styling in Slide
component

--- a/src/app.css
+++ b/src/app.css
@@ -4,6 +4,6 @@
 
 @layer utilities {
 	html {
-		@apply bg-gray-100 dark:bg-gray-900 dark:text-amber-50 overflow-hidden;
+		@apply overflow-hidden bg-gray-900 text-amber-50;
 	}
 }
